--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.3",
+    "primeicons": "^7.0.0",
+    "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
