--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.3",
+    "flowbite": "^2.5.2",
     "primeicons": "^7.0.0",
     "primeng": "^16.9.1",
     "rxjs": "~7.8.0",
