--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^16.0.0",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
@@ -25,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@ng-select/ng-select": "^11.2.0",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
     "flowbite": "^2.5.2",
     "primeicons": "^7.0.0",
     "primeng": "^16.9.1",
